cmake_minimum_required(VERSION 2.8.9)
add_subdirectory(common)
add_subdirectory(or_pt_tutorial_1)
add_subdirectory(or_pt_tutorial_1_web)
add_subdirectory(or_tutorial_1)
add_subdirectory(or_tutorial_1_gui)
add_subdirectory(or_tutorial_1_web)
add_subdirectory(or_tutorial_2)
add_subdirectory(or_tutorial_2_gui)
add_subdirectory(or_tutorial_2_web)
add_subdirectory(or_tutorial_3)
add_subdirectory(or_tutorial_3_gui)
add_subdirectory(or_tutorial_3_web)
add_subdirectory(or_tutorial_4_gui)
add_subdirectory(pt_tutorial_1)
add_subdirectory(pt_tutorial_1_web)
add_subdirectory(pt_tutorial_2)
add_subdirectory(pt_tutorial_2_web)
add_subdirectory(pt_tutorial_3)
add_subdirectory(pt_tutorial_3_web)
add_subdirectory(pt_tutorial_4_web)
add_subdirectory(pt_tutorial_5_web)
add_subdirectory(slam_tutorial_1_gui)
add_subdirectory(slam_tutorial_1_web)
add_subdirectory(slam_or_pt_tutorial_1)
add_subdirectory(slam_or_pt_tutorial_1_web)
